@@ -1,3 +1,11 @@
+2004-02-10  James Henstridge  <james@daa.com.au>
+
+	* jhbuild/main.py (main): turn off traceback printing, so we just
+	get the error message.
+
+	* jhbuild/moduleset.py (ModuleSet.get_module_list): adjust so that
+	exception messages are a bit more meaningful.
+
 2004-02-09  James Henstridge  <james@daa.com.au>
 
 	* jhbuild/frontends/gtkui.py (GtkBuildScript.handle_error): fix up
